--- a/ar.html
+++ b/ar.html
@@ -1,9 +1,9 @@
 <html lang="ar" dir="rtl">
 
 <head>
-    <link href="assets/fonts.css" rel="preload" as="style">
-    <link href="assets/home.css" rel="stylesheet">
-    <link href="assets/icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/whorani0/c/assets/fonts.css" rel="preload" as="style">
+    <link href="https://cdn.jsdelivr.net/gh/whorani0/c/assets/home.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/whorani0/c/assets/icons.css" rel="stylesheet">
 </head>
 
 <body>
