--- a/ar.html
+++ b/ar.html
@@ -1239,8 +1239,8 @@
         </div>
     </footer>
     <button class="upBtn" id="upBtn"><i class="icon-arrow-up"></i></button>
-    <link href="assets/fonts.css" rel="stylesheet">
-    <script type="text/javascript" src="assets/home.js"></script>
+    <link href="https://cdn.jsdelivr.net/gh/whorani0/c/assets/fonts.css" rel="stylesheet">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/whorani0/c/assets/home.js"></script>
     <style>
     .block_bg_svg_top path,
     .block_bg_svg_top svg {
