--- a/a.html
+++ b/a.html
@@ -1,4 +1,11 @@
+<head>
 
+    
+<head>
+    <link href="https://cdn.jsdelivr.net/gh/whorani0/c/assets/fonts.css" rel="preload" as="style">
+    <link href="https://cdn.jsdelivr.net/gh/whorani0/c/assets/home.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/whorani0/c/assets/icons.css" rel="stylesheet">
+</head>
 
 <body>
     <header class="header" id="header">
